fix(scollbar & nav): Remove scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,3 +17,7 @@ body {
   height: calc(100vh - 130px);
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
